--- a/Docker/src/.env
+++ b/Docker/src/.env
@@ -7,7 +7,7 @@ APP_URL=http://localhost:8300
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=db_ciisa_tpc
 DB_PORT=3306
 DB_DATABASE=ciisa_tpc_db
 DB_USERNAME=Ciisa2020
