docker compose windows y linux

--- a/Docker/src/.env
+++ b/Docker/src/.env
@@ -10,7 +10,7 @@ DB_CONNECTION=mysql
 DB_HOST=db_ciisa_tpc
 DB_PORT=3306
 DB_DATABASE=ciisa_tpc_db
-DB_USERNAME=Ciisa2020
+DB_USERNAME=ciisa_tpc_db
 DB_PASSWORD=Ciisa2020
 
 BROADCAST_DRIVER=log
