--- a/Docker/docker-compose-WINDOWS.yml
+++ b/Docker/docker-compose-WINDOWS.yml
@@ -28,7 +28,17 @@ services:
       - "8300:80"
     depends_on:
       - db_ciisa_tpc
-
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    links:
+      - db_ciisa_tpc:db
+    ports:
+      - "9006:80"
+    environment:
+      - MYSQL_ROOT_PASSWORD=Ciisa2020
+      - MYSQL_DATABASE=ciisa_tpc_db
+      - MYSQL_USER=ciisa_tpc_db
+      - MYSQL_PASSWORD=Ciisa2020
 
 
 volumes:
